--- a/index.html
+++ b/index.html
@@ -2,18 +2,19 @@
 <!--SajberGymnasiet-->
 <html lang="sv">
 
-    <head>
-        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Sniglet&display=swap" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="stylesheets/design1.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> <!--Hamburger icons-->
-        <meta charset="UTF-8">
-        <script src="javascript/hamburger.js"></script>
-        <script src="javascript/autolunch.js"></script>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>SajberGymnasiet</title>
+<head>
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Sniglet&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Kanit&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="stylesheets/design1.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> <!--Hamburger icons-->
+    <meta charset="UTF-8">
+    <script src="javascript/hamburger.js"></script>
+    <script src="javascript/autolunch.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SajberGymnasiet</title>
 
-    </head>
+</head>
 
     <body>
         <div id="hembg">
@@ -35,10 +36,9 @@
                         <i class="fa fa-bars"></i>
                     </a>
                 </div>
-                
-                <div class="luft"></div>
-                <img src="bilder/logo.png" id="logo" alt="Logga">
-                <div class="luft"></div>
+
+                <!-- <img src="bilder/logo.png" id="logo" alt="Logga" >  -->
+                <h1 id="slogan">"Sajber - För att vi är bättre än alla andra."</h1>
 
             </header>   
             <div id="pagewrap">
