--- a/index.html
+++ b/index.html
@@ -1,116 +1,125 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 <!--SajberGymnasiet-->
 <html lang="sv">
 
 <head>
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Sniglet&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Kanit&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="stylesheets/design1.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> <!--Hamburger icons-->
-    <meta charset="UTF-8">
-    <script src="javascript/hamburger.js"></script>
-    <script src="javascript/autolunch.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SajberGymnasiet</title>
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Sniglet&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Kanit&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="stylesheets/design1.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!--Hamburger icons-->
+  <meta charset="UTF-8">
+  <script src="js/hamburger.js"></script>
+  <script src="js/autolunch.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>SajberGymnasiet</title>
 
 </head>
 
-    <body>
-        <div id="hembg">
-            <header>
+<body>
+  <div id="hembg">
+    <header>
 
-                <!-- Top Navigation Menu -->
-                <div class="topnav">
-                    <a href="index.html" class="active">SajberGymnasiet</a>
-                    <!-- Navigation links (hidden by default) -->
-                    <div id="myLinks">
-                        <a href="scheman.html">SCHEMAN</a>
-                        <a href="#info">SKOLINFO</a>
-                        <a href="lunch.html">LUNCH</a>
-                        <a href="kontakt.html">KONTAKT</a>
+      <!-- Top Navigation Menu -->
+      <div class="topnav"> <a href="index.html" class="active">SajberGymnasiet</a>
+        <!--
+                Navigation links (hidden by default) -->
+        <div id="myLinks"> <a href="scheman.html">SCHEMAN</a> <a href="#info">SKOLINFO</a> <a href="lunch.html">LUNCH</a> <a href="kontakt.html">KONTAKT</a>
 
-                    </div>
-                    <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
-                    <a href="javascript:void(0);" class="icon" onclick="hamburger()">
-                        <i class="fa fa-bars"></i>
-                    </a>
-                </div>
+        </div>
+        <!-- "Hamburger menu" / "Bar icon" to toggle the
+                    navigation links --> <a href="javascript:void(0);" class="icon" onclick="hamburger()"> <i class="fa
+                    fa-bars"></i> </a>
+      </div> <a href="index.html"><img src="img/logo.png" alt="loggan" id="logo"></a>
+      <!-- <img
+                    src="img/logo.png" id="logo" alt="Logga" >  -->
+      <div class="mycketluft"></div>
+      <h1 id="slogan">"Sajber - För att
+        vi är bättre än alla andra."</h1>
+      <div class="mycketluft"></div>
 
-                <!-- <img src="bilder/logo.png" id="logo" alt="Logga" >  -->
-                <h1 id="slogan">"Sajber - För att vi är bättre än alla andra."</h1>
+    </header>
+    <div class="colorbox" id="reviews">
 
-            </header>   
-            <div id="pagewrap">
-                <h1 id="titletext">
+      <h1 id="titles">Varför vi är bäst!</h1>
+      <div class="reviewundertext">
+        <p>Ifall du inte redan var
+          övertalad...</p>
+      </div>
+      <h5>"Jag har gått här i två veckor och jag känner mig redan som hemma i min Sajberfamilj. 10/10"</h5>
+      <h5>"Denna skola är bäst för att skolledningen planerar allting väldigt bra. Redan första dagen fick jagett skåp!"</h5>
+      <h5>"Tjänade 100kr för att rektorn bad migskriva en positiv & granskad 5-stjärnig recension, fatta hursnällt!"</h5>
+      <h5>"Ludwig. Nuff said"</h5>
+      <h5>"Lunchen ärfantastisk, och nu med vår nya matsal finns det alltid platsför umgänge när man käkar!"</h5>
 
+    </div>
+    <!--REVIEWS END-->
 
+    <div id="pagewrap">
+      <h1 id="titletext">
 
-                    <script>
-                        var dayNames = ['söndag', 'måndag', 'tisdag', 'onsdag', 'torsdag', 'fredag', 'lördag'];
-                        document.getElementById("titletext").innerHTML = `Skolmat ${dayNames[new Date().getDay()]} ${(new Date()).getDate()}/${(new Date()).getMonth() + 1}`; //+1 för att listan börjar på 0
-                    </script>
+        <script>
+          var dayNames = ['söndag', 'måndag', 'tisdag',
+            'onsdag', 'torsdag', 'fredag', 'lördag'
+          ];
+          document.getElementById("titletext").innerHTML = `Skolmat
+                    ${dayNames[new Date().getDay()]} ${(new
+                    Date()).getDate()}/${(new Date()).getMonth() + 1}`; //+1 för
+          att listan börjar på 0
+        </script>
 
+      </h1>
+      <div class="luft"></div>
+      <table>
+        <!-- här läggs datan från
+                lunch.js, i nuläget alltid samma lista -->
+      </table>
 
-                </h1>
-            <div class="luft"></div>
-                <table>
-                    <!-- här läggs datan från lunch.js, i nuläget alltid samma lista -->
-                </table>
+      <script src="js/lunch.js" charset="Default"></script>
+      <!--Charset ändras för att använda åäö med JS-->
 
-                <script src="javascript/lunch.js" charset="Default"></script> <!--Codex ändras för att använda åäö med JS-->
+      <div id="slideshow">
 
+        <img class="mySlides w3-animate-fading" src="img/original/bildspel1.jpg" alt="bild1"> <img class="mySlides w3-animate-fading" src="img/original/bildspel2.jpg" alt="bild2"> <img class="mySlides w3-animate-fading"
+          src="img/original/bildspel3.jpg" alt="bild3">
+        <script src="js/slideshow.js"></script>
 
+        <div id="slideshowtext">
+          <h1>"Skolan du önskar att du gick
+            på"</h1>
+          <h2> - Rektor Ben Dover</h2>
+        </div>
+        <!--SLIDESHOWTEXT END-->
 
+      </div>
+      <!--SLIDESHOW END-->
 
-                <div class="colorbox" id="reviews">
+      <div id="slideshowtextmobil">
+        <h1>"Skolan du önskar att du gick
+          på"</h1>
+        <h2> - Rektor Ben Dover</h2>
+      </div>
+      <!--SLIDESHOWTEXTMOBIL END-->
 
-                    <h1 id="titles">Varför vi är bäst!</h1>
-                    <div class="reviewundertext">
-                        <p>Ifall du inte redan var övertalad...</p>
-                    </div>
-                    <h5>"Jag har gått här i två veckor och jag känner mig redan som hemma i min Sajberfamilj. 10/10"</h5>
-                    <h5>"Denna skola är bäst för att skolledningen planerar allting väldigt bra. Redan första dagen fick jag ett skåp!"</h5>
-                    <h5>"Tjänade 100kr för att rektorn bad mig skriva en positiv & granskad 5-stjärnig recension, fatta hur snällt!"</h5>
-                    <h5>"Ludwig. Nuff said"</h5>
-                    <h5>"Lunchen är fantastisk, och nu med vår nya matsal finns det alltid plats för umgänge när man käkar!"</h5>
-                </div> <!--COLORBOX-->
+    </div>
+    <!--PAGEWRAP END-->
+  </div>
+  <!--HEMBG END-->
 
-                <div id="slideshow">
-
-                    <img class="mySlides w3-animate-fading" src="bilder/original/bildspel1.jpg" alt="bild1">
-                    <img class="mySlides w3-animate-fading" src="bilder/original/bildspel2.jpg" alt="bild2">
-                    <img class="mySlides w3-animate-fading" src="bilder/original/bildspel3.jpg" alt="bild3">
-                    <script src="javascript/slideshow.js"></script>
-
-                    <div id="slideshowtext">
-                        <h1>"Skolan du önskar att du gick på"</h1>
-                        <h2> - Rektor Ben Dover</h2>
-                    </div> <!--SLIDESHOWTEXT END-->
-
-                </div> <!--SLIDESHOW END-->
-
-                <div id="slideshowtextmobil">
-                    <h1>"Skolan du önskar att du gick på"</h1>
-                    <h2> - Rektor Ben Dover</h2>
-                </div> <!--SLIDESHOWTEXTMOBIL END-->
-
-            </div> <!--PAGEWRAP END-->
-        </div> <!--HEMBG END-->
-
-        <footer>
-            <ul>
-                <li><a href="index.html">HEM</a></li>
-                <li><a href="scheman.html">SCHEMAN</a></li>
-                <li><a href="#info">SKOLINFO</a></li>
-                <li><a href="lunch.html">LUNCH</a></li>
-                <li><a href="kontakt.html">KONTAKT</a></li>
-            </ul>
-            <p><a href="https://www.youtube.com/watch?v=DLzxrzFCyOs">Vanadisgatan 10B, 113 42 Stockholm</a></p>
-            <P>Copyright 2021</P>
-        </footer>
-        <script src="build-table.js"></script>
-    </body>
-
+  <footer>
+    <ul>
+      <li><a href="scheman.html">SCHEMAN</a></li>
+      <li><a href="#info">SKOLINFO</a></li>
+      <li><a href="lunch.html">LUNCH</a></li>
+      <li><a href="kontakt.html">KONTAKT</a></li>
+    </ul>
+    <p><a href="https://www.youtube.com/watch?v=DLzxrzFCyOs">Vanadisgatan 10B, 113
+        42 Stockholm</a></p>
+    <P>Copyright 2021</P>
+  </footer>
+  <script src="build-table.js"></script>
+</body>
 
 </html>
