added sourcecode hyperlink in footer

--- a/kontakt.html
+++ b/kontakt.html
@@ -80,6 +80,7 @@
         <li><a href="scheman.html">SCHEMAN</a></li>
         <li><a href="#info">SKOLINFO</a></li>
         <li><a href="lunch.html">LUNCH</a></li>
+        <li><a href="https://github.com/LiterallyFabian/school">SOURCE</a></li>
       </ul>
       <p><a href="https://www.youtube.com/watch?v=DLzxrzFCyOs">Vanadisgatan 10B, 113 42
           Stockholm</a></p>
