--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
       <li><a href="scheman.html">SCHEMAN</a></li>
       <li><a href="#info">SKOLINFO</a></li>
       <li><a href="lunch.html">LUNCH</a></li>
+      <li><a href="https://github.com/LiterallyFabian/school">SOURCE</a></li>
       <li><a href="kontakt.html">KONTAKT</a></li>
     </ul>
     <p><a href="https://www.youtube.com/watch?v=DLzxrzFCyOs">Vanadisgatan 10B, 113
