started with schema

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="topnav"> <a href="index.html" class="active">SajberGymnasiet</a>
         <!--
                 Navigation links (hidden by default) -->
-        <div id="myLinks"> <a href="scheman.html">SCHEMAN</a> <a href="#info">SKOLINFO</a> <a href="lunch.html">LUNCH</a> <a href="kontakt.html">KONTAKT</a>
+        <div id="myLinks"> <a href="schema.html">SCHEMAN</a> <a href="#info">SKOLINFO</a> <a href="lunch.html">LUNCH</a> <a href="kontakt.html">KONTAKT</a>
 
         </div>
         <!-- "Hamburger menu" / "Bar icon" to toggle the
@@ -110,8 +110,8 @@
 
   <footer>
     <ul>
-      <li><a href="scheman.html">SCHEMAN</a></li>
-      <li><a href="#info">SKOLINFO</a></li>
+      <li><a href="schema.html">SCHEMAN</a></li>
+      <li><a href="info.html">SKOLINFO</a></li>
       <li><a href="lunch.html">LUNCH</a></li>
       <li><a href="https://github.com/LiterallyFabian/school">SOURCE</a></li>
       <li><a href="kontakt.html">KONTAKT</a></li>
