--- a/kontakt.html
+++ b/kontakt.html
@@ -11,9 +11,9 @@
   <!--Hamburger icons-->
   <link rel="stylesheet" type="text/css" href="stylesheets/design1.css">
   <meta charset="UTF-8">
-  <script src="javascript/hamburger.js"></script>
+  <script src="js/hamburger.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fabian Lindgren</title>
+  <title>SajberGymnasiet</title>
 
 </head>
 
@@ -25,7 +25,7 @@
       <div class="topnav"> <a href="index.html" class="active">SajberGymnasiet</a>
         <!--
                 Navigation links (hidden by default) -->
-        <div id="myLinks"> <a href="scheman.html">SCHEMAN</a> <a href="#info">SKOLINFO</a> <a href="lunch.html">LUNCH</a> <a href="kontakt.html">KONTAKT</a>
+        <div id="myLinks"> <a href="schema.html">SCHEMAN</a> <a href="#info">SKOLINFO</a> <a href="lunch.html">LUNCH</a> <a href="kontakt.html">KONTAKT</a>
 
         </div>
         <!-- "Hamburger menu" / "Bar icon" to toggle the
@@ -77,9 +77,9 @@
     <footer>
       <ul>
         <li><a href="index.html">HEM</a></li>
-        <li><a href="scheman.html">SCHEMAN</a></li>
-        <li><a href="#info">SKOLINFO</a></li>
-        <li><a href="lunch.html">LUNCH</a></li>
+        <li><a href="schema.html">SCHEMAN</a></li>
+        <li><a href="info.html">SKOLINFO</a></li>
+        <li><a href="index.html#lunch">LUNCH</a></li>
         <li><a href="https://github.com/LiterallyFabian/school">SOURCE</a></li>
       </ul>
       <p><a href="https://www.youtube.com/watch?v=DLzxrzFCyOs">Vanadisgatan 10B, 113 42
