fredag 17/4 - schema & info, started resizing

--- a/info.html
+++ b/info.html
@@ -1,4 +1,4 @@
-﻿
+
 <!DOCTYPE html>
 <!--SajberGymnasiet-->
 <html lang="sv">
@@ -26,7 +26,7 @@
       <div class="topnav"> <a href="index.html" class="active">SajberGymnasiet</a>
         <!--
                 Navigation links (hidden by default) -->
-        <div id="myLinks"> <a href="schema.html">SCHEMAN</a> <a href="info.html">SKOLINFO</a> <a href="index.html#titletext">LUNCH</a> <a href="kontakt.html">KONTAKT</a> <a href="https://github.com/LiterallyFabian/school">SOURCE</a>
+        <div id="myLinks"> <a href="index.html">HEM</a><a href="schema.html">SCHEMAN</a> <a href="index.html#titletext">LUNCH</a> <a href="kontakt.html">KONTAKT</a> <a href="https://github.com/LiterallyFabian/school">SOURCE</a>
 
         </div>
         <!-- "Hamburger menu" / "Bar icon" to toggle the
@@ -36,23 +36,35 @@
       <!-- <img
                     src="img/logo.png" id="logo" alt="Logga" >  -->
       <div class="mycketluft"></div>
-      <h1 id="slogan">"Sajber - För att
-        vi är bättre än alla andra."</h1>
+      <h1 id="slogan">Information till lärare och elever</h1>
       <div class="mycketluft"></div>
 
     </header>
     <div class="colorbox" id="reviews">
 
-      <h1 id="titles">Varför vi är bäst!</h1>
+      <h1 id="titles">Nyheter</h1>
       <div class="reviewundertext">
-        <p>Ifall du inte redan var
-          övertalad...</p>
+        <p>Kan komma att ändras.</p>
       </div>
-      <h5>"Jag har gått här i två veckor och jag känner mig redan som hemma i min Sajberfamilj. 10/10"</h5>
-      <h5>"Denna skola är bäst för att skolledningen planerar allting väldigt bra. Redan första dagen fick jagett skåp!"</h5>
-      <h5>"Tjänade 100kr för att rektorn bad migskriva en positiv & granskad 5-stjärnig recension, fatta hursnällt!"</h5>
-      <h5>"Ludwig. Nuff said"</h5>
-      <h5>"Lunchen ärfantastisk, och nu med vår nya matsal finns det alltid platsför umgänge när man käkar!"</h5>
+      <h5>3/4 - Lunchen kommer testa nya öppettider. Denna gång mellan 11-12 för hela skolan, för att kunna tillåta klasser att jobba i matsalen</h5>
+      <h5>11/4 - Vår nya elevassistent Mike Hunt börjar på skolan</h5>
+      <h5>20/4 - Obligatorisk friluftsdag för åk 2.</h5>
+      <h5>28/4 - Öppet hus. <a href="https://sajber.me/">SajberSim</a> släpps offentligt</h5>
+      <h5>5/5 - Gymnasiemässan för alla ambassadörer</h5>
+      <h5>16/5 - Påsklov tills 25/5</h5>
+
+    <div class="colorbox" id="reviews">
+
+      <h1 id="titles">SchoolHard</h1>
+      <div class="reviewundertext">
+        <p>Information om inloggning och använding av <a href="https://www.youtube.com/watch?v=DLzxrzFCyOs">skolplattformen</a></p>
+      </div>
+      <h5>Ditt användarnamn är dina 2 första bokstäver i namnet tillsammans med ditt födelseår, till exempel fa2002.</h5>
+      <h5>Ditt lösenord är abc123 by default, men du kan ändra detta genom att skicka ett brev till skolan med ämnesraden "SchoolHard"</h5>
+      <h5>Ifall du går till "Betyg" i SchoolHard kan du se dina betyg</h5>
+      <h5>Närvaro kan du se i SchoolHard genom att gå till närvarofliken</h5>
+      <h5>varför skriver jag ens detta?</h5>
+      <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h5>
 
     </div>
     <!--REVIEWS END-->
@@ -108,9 +120,9 @@
   <!--HEMBG END-->
 
   <footer>
-    <ul>
+    <ul
+      <li><a href="index.html">HEM</a></li>
       <li><a href="schema.html">SCHEMAN</a></li>
-      <li><a href="info.html">SKOLINFO</a></li>
       <li><a href="index.html#titletext">LUNCH</a></li>
       <li><a href="https://github.com/LiterallyFabian/school">SOURCE</a></li>
       <li><a href="kontakt.html">KONTAKT</a></li>
