--- a/kontakt.html
+++ b/kontakt.html
@@ -25,7 +25,7 @@
       <div class="topnav"> <a href="index.html" class="active">SajberGymnasiet</a>
         <!--
                 Navigation links (hidden by default) -->
-        <div id="myLinks"> <a href="schema.html">SCHEMAN</a> <a href="#info">SKOLINFO</a> <a href="lunch.html">LUNCH</a> <a href="kontakt.html">KONTAKT</a>
+        <div id="myLinks"> <a href="index.html">HEM</a><a href="schema.html">SCHEMAN</a> <a href="info.html">SKOLINFO</a> <a href="index.html#titletext">LUNCH</a> <a href="https://github.com/LiterallyFabian/school">SOURCE</a>
 
         </div>
         <!-- "Hamburger menu" / "Bar icon" to toggle the
@@ -37,7 +37,7 @@
         <div id="memestitle">
           <h1 id="slogan">Ansök till SajberGymnasiet
             här!</h1>
-          <h2 id="underslogan">Vi vet att du vill...</h1>
+          <h2 id="underslogan">Vi vet att du vill...</h2>
         </div>
         <div class="mindreluft"></div>
 
@@ -79,7 +79,7 @@
         <li><a href="index.html">HEM</a></li>
         <li><a href="schema.html">SCHEMAN</a></li>
         <li><a href="info.html">SKOLINFO</a></li>
-        <li><a href="index.html#lunch">LUNCH</a></li>
+        <li><a href="index.html#titletext">LUNCH</a></li>
         <li><a href="https://github.com/LiterallyFabian/school">SOURCE</a></li>
       </ul>
       <p><a href="https://www.youtube.com/watch?v=DLzxrzFCyOs">Vanadisgatan 10B, 113 42
