--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Sniglet&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Kanit&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="stylesheets/design1.css">
+  <link rel="stylesheet" type="text/css" href="stylesheets/768p.css">
+  <link rel="stylesheet" type="text/css" href="stylesheets/1600p.css">
+  <link rel="stylesheet" type="text/css" href="stylesheets/2560p.css">
+  <link rel="stylesheet" type="text/css" href="stylesheets/4k.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!--Hamburger icons-->
   <meta charset="UTF-8">
@@ -15,10 +18,9 @@
   <script src="js/autolunch.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SajberGymnasiet</title>
-
 </head>
 
-<body>
+<body bgcolor="#FFA6EF">
   <div id="hembg">
     <header>
 
@@ -36,8 +38,7 @@
       <!-- <img
                     src="img/logo.png" id="logo" alt="Logga" >  -->
       <div class="mycketluft"></div>
-      <h1 id="slogan">"Sajber - För att
-        vi är bättre än alla andra."</h1>
+      <h1 id="slogan">"Sajber - Bättre än alla andra"</h1>
       <div class="mycketluft"></div>
 
     </header>
@@ -49,8 +50,8 @@
           övertalad...</p>
       </div>
       <h5>"Jag har gått här i två veckor och jag känner mig redan som hemma i min Sajberfamilj. 10/10"</h5>
-      <h5>"Denna skola är bäst för att skolledningen planerar allting väldigt bra. Redan första dagen fick jagett skåp!"</h5>
-      <h5>"Tjänade 100kr för att rektorn bad migskriva en positiv & granskad 5-stjärnig recension, fatta hursnällt!"</h5>
+      <h5>"Denna skola är bäst för att skolledningen planerar allting väldigt bra. Redan första dagen fick jag ett skåp!"</h5>
+      <h5>"Tjänade 100kr för att rektorn bad migskriva en positiv & granskad 5-stjärnig recension, fatta hur snällt!"</h5>
       <h5>"Ludwig. Nuff said"</h5>
       <h5>"Lunchen ärfantastisk, och nu med vår nya matsal finns det alltid platsför umgänge när man käkar!"</h5>
 
@@ -75,14 +76,14 @@
         <!-- här läggs datan från
                 lunch.js, i nuläget alltid samma lista -->
       </table>
-
+<div class="luft"></div>
       <script src="js/lunch.js" charset="Default"></script>
       <!--Charset ändras för att använda åäö med JS-->
 
       <div id="slideshow">
 
-        <img class="mySlides w3-animate-fading" src="img/original/bildspel1.jpg" alt="bild1"> <img class="mySlides w3-animate-fading" src="img/original/bildspel2.jpg" alt="bild2"> <img class="mySlides w3-animate-fading"
-          src="img/original/bildspel3.jpg" alt="bild3">
+        <img class="mySlides w3-animate-fading" src="img/ss/bildspel1.jpg" alt="bild1"> <img class="mySlides w3-animate-fading" src="img/ss/bildspel2.jpg" alt="bild2"> <img class="mySlides w3-animate-fading"
+          src="img/ss/bildspel3.jpg" alt="bild3">
         <script src="js/slideshow.js"></script>
 
         <div id="slideshowtext">
@@ -96,8 +97,7 @@
       <!--SLIDESHOW END-->
 
       <div id="slideshowtextmobil">
-        <h1>"Skolan du önskar att du gick
-          på"</h1>
+        <h1>"Skolan du önskar att du gick på"</h1>
         <h2> - Rektor Ben Dover</h2>
       </div>
       <!--SLIDESHOWTEXTMOBIL END-->
