--- a/info.html
+++ b/info.html
@@ -7,7 +7,10 @@
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Sniglet&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Kanit&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="stylesheets/design1.css">
+<link rel="stylesheet" type="text/css" href="stylesheets/768p.css">
+<link rel="stylesheet" type="text/css" href="stylesheets/1600p.css">
+<link rel="stylesheet" type="text/css" href="stylesheets/2560p.css">
+<link rel="stylesheet" type="text/css" href="stylesheets/4k.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!--Hamburger icons-->
   <meta charset="UTF-8">
@@ -91,28 +94,7 @@
       <script src="js/lunch.js" charset="Default"></script>
       <!--Charset ändras för att använda åäö med JS-->
 
-      <div id="slideshow">
 
-        <img class="mySlides w3-animate-fading" src="img/original/bildspel1.jpg" alt="bild1"> <img class="mySlides w3-animate-fading" src="img/original/bildspel2.jpg" alt="bild2"> <img class="mySlides w3-animate-fading"
-          src="img/original/bildspel3.jpg" alt="bild3">
-        <script src="js/slideshow.js"></script>
-
-        <div id="slideshowtext">
-          <h1>"Skolan du önskar att du gick
-            på"</h1>
-          <h2> - Rektor Ben Dover</h2>
-        </div>
-        <!--SLIDESHOWTEXT END-->
-
-      </div>
-      <!--SLIDESHOW END-->
-
-      <div id="slideshowtextmobil">
-        <h1>"Skolan du önskar att du gick
-          på"</h1>
-        <h2> - Rektor Ben Dover</h2>
-      </div>
-      <!--SLIDESHOWTEXTMOBIL END-->
 
     </div>
     <!--PAGEWRAP END-->
@@ -120,7 +102,7 @@
   <!--HEMBG END-->
 
   <footer>
-    <ul
+    <ul>
       <li><a href="index.html">HEM</a></li>
       <li><a href="schema.html">SCHEMAN</a></li>
       <li><a href="index.html#titletext">LUNCH</a></li>
