--- a/schema.html
+++ b/schema.html
@@ -6,10 +6,12 @@
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Sniglet&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Kanit&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="stylesheets/design1.css">
+<link rel="stylesheet" type="text/css" href="stylesheets/768p.css">
+<link rel="stylesheet" type="text/css" href="stylesheets/1600p.css">
+<link rel="stylesheet" type="text/css" href="stylesheets/2560p.css">
+<link rel="stylesheet" type="text/css" href="stylesheets/4k.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!--Hamburger icons-->
-  <link rel="stylesheet" type="text/css" href="stylesheets/design1.css">
   <meta charset="UTF-8">
   <script src="js/hamburger.js"></script>
 
@@ -36,7 +38,6 @@
                     fa-bars"></i> </a>
       </div> <a href="index.html"><img src="img/logo.png" alt="loggan" id="logo"></a>
       <div class="brodtext">
-        <div class="mindreluft"></div>
           <h1 id="slogan">Scheman</h1>
           <h2 id="underslogan">Denna sidas javascript existerar, men fungerar ej :(</h2>
 
