--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
   <footer>
     <ul>
-      <li><a href="schema.html">SCHEMAN</a></li>
+      <li><a href="schema">SCHEMAN</a></li>
       <li><a href="info.html">SKOLINFO</a></li>
       <li><a href="index.html#titletext">LUNCH</a></li>
       <li><a href="https://github.com/LiterallyFabian/school">SOURCE</a></li>
