--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <title>SajberGymnasiet</title>
 </head>
 
-<body bgcolor="#FFA6EF">
+<body>
   <div id="hembg">
     <header>
 
@@ -76,14 +76,13 @@
         <!-- här läggs datan från
                 lunch.js, i nuläget alltid samma lista -->
       </table>
-<div class="luft"></div>
-      <script src="js/lunch.js" charset="Default"></script>
+      <div class="luft"></div>
+      <script src="js/lunch.js"></script>
       <!--Charset ändras för att använda åäö med JS-->
 
       <div id="slideshow">
 
-        <img class="mySlides w3-animate-fading" src="img/ss/bildspel1.jpg" alt="bild1"> <img class="mySlides w3-animate-fading" src="img/ss/bildspel2.jpg" alt="bild2"> <img class="mySlides w3-animate-fading"
-          src="img/ss/bildspel3.jpg" alt="bild3">
+        <img class="mySlides w3-animate-fading" src="img/ss/bildspel1.jpg" alt="bild1"> <img class="mySlides w3-animate-fading" src="img/ss/bildspel2.jpg" alt="bild2"> <img class="mySlides w3-animate-fading" src="img/ss/bildspel3.jpg" alt="bild3">
         <script src="js/slideshow.js"></script>
 
         <div id="slideshowtext">
@@ -109,7 +108,7 @@
 
   <footer>
     <ul>
-      <li><a href="schema">SCHEMAN</a></li>
+      <li><a href="schema.html">SCHEMAN</a></li>
       <li><a href="info.html">SKOLINFO</a></li>
       <li><a href="index.html#titletext">LUNCH</a></li>
       <li><a href="https://github.com/LiterallyFabian/school">SOURCE</a></li>
