--- a/schema.html
+++ b/schema.html
@@ -6,19 +6,19 @@
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Sniglet&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Kanit&display=swap" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="stylesheets/768p.css">
-<link rel="stylesheet" type="text/css" href="stylesheets/1600p.css">
-<link rel="stylesheet" type="text/css" href="stylesheets/2560p.css">
-<link rel="stylesheet" type="text/css" href="stylesheets/4k.css">
+  <link rel="stylesheet" type="text/css" href="stylesheets/768p.css">
+  <link rel="stylesheet" type="text/css" href="stylesheets/1600p.css">
+  <link rel="stylesheet" type="text/css" href="stylesheets/2560p.css">
+  <link rel="stylesheet" type="text/css" href="stylesheets/4k.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!--Hamburger icons-->
   <meta charset="UTF-8">
   <script src="js/hamburger.js"></script>
 
-    <title>SajberGymnasiet</title>
+  <title>SajberGymnasiet</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/schedule.js"></script>
 </head>
 
@@ -37,23 +37,22 @@
                     navigation links --> <a href="javascript:void(0);" class="icon" onclick="hamburger()"> <i class="fa
                     fa-bars"></i> </a>
       </div> <a href="index.html"><img src="img/logo.png" alt="loggan" id="logo"></a>
-      <div class="brodtext">
-          <h1 id="slogan">Scheman</h1>
-          <h2 id="underslogan">Denna sidas javascript existerar, men fungerar ej :(</h2>
+      <h1 id="slogan">Scheman</h1>
+      <h2 id="underslogan">Denna sidas javascript existerar, men fungerar ej :(</h2>
 
 
 
-          <label for="program" id="programlabel">Välj klass...</label><br>
-          <select class="dropdown" id="program" name="program" required>
-            <option value="none"></option>
-            <option value="1">TE19A</option>
-            <option value="2">ES17B</option>
-            <option value="3">ES18A</option>
-            <option value="4">EK19C</option>
-            <option value="5">NA19B</option>
-            <option value="6">HV19A</option>
-          </select><br>
-<img id="schemapicture" src='img/schedules/te.png'>
+      <label for="program" id="programlabel">Välj klass...</label><br>
+      <select class="dropdown" id="program" name="program" required>
+        <option value="none"> </option>
+        <option value="1">TE19A</option>
+        <option value="2">ES17B</option>
+        <option value="3">ES18A</option>
+        <option value="4">EK19C</option>
+        <option value="5">NA19B</option>
+        <option value="6">HV19A</option>
+      </select><br>
+      <img id="schemapicture" src='img/schedules/te.png' alt="schema">
 
 
 
