--- a/kontakt.html
+++ b/kontakt.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" type="text/css" href="stylesheets/1600p.css">
   <link rel="stylesheet" type="text/css" href="stylesheets/2560p.css">
   <link rel="stylesheet" type="text/css" href="stylesheets/4k.css">
+  <link rel="stylesheet" type="text/css" href="stylesheets/global.css">
   <meta charset="UTF-8">
   <script src="js/hamburger.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,7 +23,7 @@
 <body>
   <div id="hembg">
     <header>
-
+      <div id="dotcom"></div>
       <!-- Top Navigation Menu -->
       <div class="topnav"> <a href="index.html" class="active">SajberGymnasiet</a>
         <!--
