--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <!--SajberGymnasiet-->
 <html lang="sv">
-
+<meta http-equiv="Content-Language" content="sv" />
 <head>
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Sniglet&display=swap" rel="stylesheet">
@@ -11,9 +11,10 @@
   <link rel="stylesheet" type="text/css" href="stylesheets/1600p.css">
   <link rel="stylesheet" type="text/css" href="stylesheets/2560p.css">
   <link rel="stylesheet" type="text/css" href="stylesheets/4k.css">
+  <link rel="stylesheet" type="text/css" href="stylesheets/global.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!--Hamburger icons-->
-  <meta charset="UTF-8">
+  <meta charset="iso-8859-1">
   <script src="js/hamburger.js"></script>
   <script src="js/autolunch.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,7 +24,7 @@
 <body>
   <div id="hembg">
     <header>
-
+      <div id="dotcom"></div>
       <!-- Top Navigation Menu -->
       <div class="topnav"> <a href="index.html" class="active">SajberGymnasiet</a>
         <!--
@@ -51,9 +52,9 @@
       </div>
       <h5>"Jag har gått här i två veckor och jag känner mig redan som hemma i min Sajberfamilj. 10/10"</h5>
       <h5>"Denna skola är bäst för att skolledningen planerar allting väldigt bra. Redan första dagen fick jag ett skåp!"</h5>
-      <h5>"Tjänade 100kr för att rektorn bad migskriva en positiv & granskad 5-stjärnig recension, fatta hur snällt!"</h5>
+      <h5>"Tjänade 100kr för att rektorn bad mig skriva en positiv & granskad 5-stjärnig recension, fatta hur snällt!"</h5>
       <h5>"Ludwig. Nuff said"</h5>
-      <h5>"Lunchen ärfantastisk, och nu med vår nya matsal finns det alltid platsför umgänge när man käkar!"</h5>
+      <h5>"Lunchen är fantastisk, och nu med vår nya matsal finns det alltid platsför umgänge när man käkar!"</h5>
 
     </div>
     <!--REVIEWS END-->
@@ -77,7 +78,7 @@
                 lunch.js, i nuläget alltid samma lista -->
       </table>
       <div class="luft"></div>
-      <script src="js/lunch.js"></script>
+      <script src="js/lunch.js" charset="iso-8859-1"></script>
       <!--Charset ändras för att använda åäö med JS-->
 
       <div id="slideshow">
