--- a/schema.html
+++ b/schema.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" type="text/css" href="stylesheets/1600p.css">
   <link rel="stylesheet" type="text/css" href="stylesheets/2560p.css">
   <link rel="stylesheet" type="text/css" href="stylesheets/4k.css">
+  <link rel="stylesheet" type="text/css" href="stylesheets/global.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!--Hamburger icons-->
   <meta charset="UTF-8">
@@ -25,7 +26,7 @@
 <body>
   <div id="hembg">
     <header>
-
+      <div id="dotcom"></div>
       <!-- Top Navigation Menu -->
       <div class="topnav"> <a href="index.html" class="active">SajberGymnasiet</a>
         <!--
