--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <!DOCTYPE html>
 <!--SajberGymnasiet-->
 <html lang="sv">
-<meta http-equiv="Content-Language" content="sv" />
 <head>
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Sniglet&display=swap" rel="stylesheet">
@@ -14,10 +13,9 @@
   <link rel="stylesheet" type="text/css" href="stylesheets/global.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!--Hamburger icons-->
-  <meta charset="windows-1256">
   <script src="js/hamburger.js"></script>
   <script src="js/autolunch.js"></script>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8" http-equiv="Content-Language" content="sv">
   <title>SajberGymnasiet</title>
 </head>
 
