--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 lunch.js, i nuläget alltid samma lista -->
       </table>
       <div class="luft"></div>
-      <script src="js/lunch.js" charset="iso-8859-1"></script>
+      <script src="js/lunch.js" charset="utf-8"></script>
       <!--Charset ändras för att använda åäö med JS-->
 
       <div id="slideshow">
