--- a/alfred/index.html
+++ b/alfred/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:900&display=swap" rel="stylesheet">
     
-    <link rel="stylesheet" type="text/css" href="Stylesheets/design1.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/design1.css">
     
     <meta charset ="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
